# Test_Task

myproject/: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
myproject/employees/: admin.py  models.py  serializers.py  urls.py  views.py
myproject/employees/migrations/: 0001_initial.py  0002_department.py  0003_employee_department.py  0004_employee_leader_employee_transfer_date.py  0005_department_active.py
myproject/myproject/: settings.py  urls.py
